--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @use 'variaveis';
 @use 'hero';
 @use 'portifolio';
+@use 'skills';
 
 *{
     margin: 0;
@@ -28,4 +29,18 @@ body{
 }
 .title{
     @include title()
+}
+
+.hidden{
+  opacity: 0;
+  filter: blur(15px);
+  transform: translateX(-100%);
+  transition: all 1s;
+
+}
+.show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+    transition: all 0.5s;
 }
